--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <header class="cabecalho">
       <img class="cabecalho-imagem" src="./img/logo.png" alt="logo da escola">
       <h1 class="cabecalho-titulo">Meu Site Criativo</h1>
@@ -17,6 +18,16 @@
     </header>
 
 
+
+    
+    <section class="escola">
+      <div class="escola-div-conteudo">
+        <h2 class="escola-titulo">Colégio Cívico Militar Professsor Francisco Villanueva
+          <p class="escola-texto-um">Ensino Fundamental e Ensino Médio</p></h2>
+          <p class="escola-texto-dois">A turma 2C é a mais estudiosa e famosa...</p>
+      </div>
+      <img class="escola-imagem" src="./img/escola.jpg" alt="foto da escola">
+    </section>
 
     
 </body>
