--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <!--Inicio seção cabeçalho-->
   <header class="cabecalho">
-    <img class="cabecalho-imagem" src="./img/logo-escola.jpg" alt="logo da escola">
+    <img class="cabecalho-imagem" src="./img/ocean.jpg" alt="logo da escola">
     <h1 class="cabecalho-titulo">Meu Site Criativo</h1>
     <ul class="cabecalho-lista">
       <li class="cabecalho-lista-item"><a href="#escola">ESCOLA</a></li>
