--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
+DOCTYPE html>
 <html lang="pt-br">
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Site Criativo</title>
      <link rel="stylesheet" href="style.css">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com"> crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap" rel="stylesheet"
 </head>
 <body>
 
@@ -30,5 +33,16 @@
 </section>
 <!--fim da seção escola-->
 
-</body>
-</html>
+<!--começo da seção estudante-->
+<section class="estudante">
+    <h2 class="estudante-titulo">Quem somos!!!</h2>
+    <p>Alunos do 2º ano da disciplina de Matemática II-Trilha de Programação-2ºC</p>
+
+ <div class="estudantes-todos">
+     <div class="estudante-div">
+          <img class="estudante-imagem" src="./img/imagem-estudante.jpg" alt="imagem estudante">
+          <h3 class="estudante-nome">Estudante</h3>
+          <a href="https://github.com//"><img class="estudante-icone" src="./img/github.png" alt="icone github"></a>
+          <a href="https://www.instagram.com/villanuevamusic/"><img class="estudante-icone" src="./img/instagram.png" alt="icone instagram"></a>
+
+</section>
