--- a/index.html
+++ b/index.html
@@ -49,4 +49,25 @@ DOCTYPE html>
 
      <div class="estudante-div">
         <img class="estudante-imagem" src="./img/imagem-estudante1.jpg" alt="imagem estudante">
+        <h3 class="estudente-nome">Estudante2</h3>
+        <a href="https://github.com//"><img class="estudante-icone" src="./img/github.png" alt="icone github"></a>
+
+<a href="https://www.instagram.com/villanuevamusic/"><img class="estudante-icone" src="./img/instagram.png" alt="icone instagram"></a>
+
+<a href="https://m.facebook.com/profile.php?id=120733584614917"><img class="estudante-icone" src="./img/facebook.png" alt="icone facebook"></a>
+
+<div class="estudante-div">
+
+<img class="estudante-imagem" src="./img/imagem-estudante1.jpg" alt="imagem estudante">
+
+<h3 class="estudante-nome">Estudante3</h3>
+
+<a href="https://github.com//"><img class="estudante-icone" src="./img/github.png" alt="icone github"></a>
+
+<a href="https://www.instagram.com/villanuevamusic/"><img class="estudante-icone" src="./img/instagram.png" alt="icone instagram"></a>
+
+<a href="https://m.facebook.com/profile.php?id=128733584614917"><img class="estudante-icone" src="./img/facebook.png" alt="icone facebook"></a>
+
+</div>
+
 </section>
