--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
 <!--Inicio seção cabeçalho-->
   <header class="cabecalho">
-    <img class="cabecalho-imagem" src="./img/logo-escola.jpg" alt="logo da escola">
+    <img class="cabecalho-imagem" src="./img/ocean.jpg" alt="logo da escola">
     <h1 class="cabecalho-titulo">Meu Site Criativo</h1>
     <ul class="cabecalho-lista">
       <li class="cabecalho-lista-item"><a href="#escola">ESCOLA</a></li>
@@ -29,7 +29,7 @@
     <p class="escola-texto-um">Ensino Fundamental e Ensino Médio</p></h2>
     <p class="escola-texto-dois">A turma 2C é a mais estudiosa e famosa...</p>
   </div>
-  <img class="escola-imagem" src="./img/escola.jpg" alt="foto da escola">
+  <img class="escola-imagem" src="./img/peixe.webp" alt="foto da escola">
 </section>
 <!--fim da seção escola-->
 
