--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!--Inicio seção cabeçalho-->
 
 <header class="cabecalho">
-    <img class="cabecalho-imagem" src="./img/arvore.webp" alt="logo da escola">
+    <img class="cabecalho-imagem" src="./img/ocean.jpg" alt="logo da escola">
     <h1 class="cabecalho-titulo">Meu Site Criativo</h1>
     <ul class="cabecalho-lista">
         <li class="cabecalho-lista-item"><a href="#escola">ESCOLA</a></li>
@@ -31,7 +31,7 @@
         <p class="escola-texto-dois">A turma 2C é a mais estudiosa e famosa...</p>
 </div>
 
-<img class="escola-imagem" src="./img/rosa.webp" alt="foto da escola">
+<img class="escola-imagem" src="./img/peixe.webp" alt="foto da escola">
 
 </section>
 <!--começo da seção estudante-->
